frontend-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      type: frontend
  template:
    metadata:
      
      labels:
        type: frontend
    spec:
      containers:
      - name: frontend-app
        image: kar0169/nodeapp-app:2.0
        ports:
        - containerPort: 3000
        imagePullPolicy: IfNotPresent
