server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-svc
spec:
  selector:
    type: backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
