ingress.yaml
apiVersion: networking.k8s.io/v1
   
kind: Ingress
   
metadata:
   
  name: node-ingress
   
  
   
spec:
   
  rules:
   
    - 
   
      http:
   
        paths:
   
          - path: /
            pathType: Prefix  
   
            
   
            backend:
   
              service:
   
                name: server-svc
   
                port:
   
                  number: 5000
